[shenker/microscope_design] Laser and filter spectrum simulation.

--- a/paulssonlab/src/paulssonlab/shenker/microscope_design/Hyperspectral spectral resolution.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/microscope_design/Hyperspectral spectral resolution.ipynb
@@ -8,8 +8,19 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import re\n",
     "import requests\n",
-    "import holoviews as hv"
+    "import holoviews as hv\n",
+    "import pint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "u = pint.UnitRegistry()"
    ]
   },
   {
@@ -19,6 +30,422 @@
    "outputs": [],
    "source": [
     "hv.extension(\"bokeh\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Todo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- MM crop normalized (sets image grid)\n",
+    "- excitation line (on image grid)\n",
+    "    - curvature\n",
+    "    - inhomogeneity\n",
+    "- project excitation line on sample\n",
+    "- laser power\n",
+    "- laser+filter spectrum\n",
+    "- excitation spectrum\n",
+    "- photophysics\n",
+    "- prism generates emission spectrum\n",
+    "- add reflected excitation light (10^6?)\n",
+    "- physical blocker\n",
+    "- sensor\n",
+    "    - QE\n",
+    "    - full-well\n",
+    "    - dark noise\n",
+    "    - linearity\n",
+    "    - spatial homogeneity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Definitions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def clean_multiindex_csv(df):\n",
+    "    columns = pd.DataFrame(df.columns.tolist())\n",
+    "    columns.loc[columns[0].str.startswith(\"Unnamed:\"), 0] = np.nan\n",
+    "    columns[0] = columns[0].fillna(method=\"ffill\")\n",
+    "    mask = pd.isnull(columns[0])\n",
+    "    columns[0] = columns[0].fillna(\"\")\n",
+    "    columns.loc[mask, [0, 1]] = columns.loc[mask, [1, 0]].values\n",
+    "    df.columns = pd.MultiIndex.from_tuples(columns.to_records(index=False).tolist())\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Photophysics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "power = 75 * u.milliwatts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "width = 26.5 * u.mm / 20\n",
+    "height = 0.213 * u.um"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(power / (width * height)).to(\"kW/cm^2\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Femtosecond laser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.stats import norm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "norm.pdf(521, 500, 4.4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "norm.pdf(510, 500, 6.9 / 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temporal_fwhm = 120 * u.femtoseconds\n",
+    "lmbda = 700 * u.nanometer\n",
+    "delta_lmbda = 40 * u.nanometer\n",
+    "xs = np.linspace(lmbda - delta_lmbda, lmbda + delta_lmbda, 10 * delta_lmbda.magnitude)\n",
+    "normalization = (len(xs) / (xs[-1] - xs[0])).magnitude\n",
+    "tbwp_quality = 1.5\n",
+    "tbwp_gaussian = 0.44 * tbwp_quality  # gaussian\n",
+    "tbwp_sech = 0.315 * tbwp_quality  # sech^2\n",
+    "# tbwp = 0.6 # Levante Emerald 2 ps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spectral_width = (lmbda**2 / (u.speed_of_light * temporal_fwhm)).to(\"nm\")\n",
+    "spectral_width"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spectral_width * tbwp_gaussian"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spectral_sigma = tbwp_gaussian * spectral_width / (2 * np.sqrt(2 * np.log(2)))\n",
+    "spectral_sigma"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gaussian_spectrum = norm.pdf(xs, lmbda, spectral_sigma)\n",
+    "gaussian_cdf = np.cumsum(gaussian_spectrum) / normalization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hv.Curve((xs, np.log10(gaussian_spectrum))) * hv.Curve((xs, np.log(1 - gaussian_cdf)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sech_spectral_fwhm = tbwp_sech * spectral_fwhm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sech_alpha = sech_spectral_fwhm / np.arccosh(np.sqrt(2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sech_spectrum = (\n",
+    "    1\n",
+    "    / (np.sqrt(sech_alpha) * np.cosh(2 * (xs - xs[xs.shape[0] // 2]) / sech_alpha)) ** 2\n",
+    ")\n",
+    "sech_cdf = np.cumsum(sech_spectrum.magnitude) / normalization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hv.Curve((xs, np.log10(sech_spectrum.magnitude))) * hv.Curve((xs, np.log(1 - sech_cdf)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hv.Curve((xs, np.log10(gaussian_spectrum))) * hv.Curve(\n",
+    "    (xs, np.log10(sech_spectrum.magnitude))\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_filter_spectra(filename):\n",
+    "    filters_all = clean_multiindex_csv(pd.read_csv(filename, header=[2, 3]).iloc[:, 1:])\n",
+    "    filters = {}\n",
+    "    filter_peaks = {}\n",
+    "    for pos in filters_all.columns.levels[0]:\n",
+    "        name = float(re.sub(r\"(?:Filter|Sample 2E) @ ([\\d.]+) mm\", r\"\\1\", pos))\n",
+    "        filters[name] = filters_all[pos].set_index(filters_all[pos].columns[0])\n",
+    "        filters[name].columns = [\"transmission\"]\n",
+    "        filters[name].index.name = \"wavelength\"\n",
+    "        filters[name] /= 100  # convert to fraction\n",
+    "        filter_peaks[name] = filters[name].iloc[:, 0].idxmax()\n",
+    "    return filters, filter_peaks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# filters, filter_peaks = load_filter_spectra(\"LF102474.csv.csv\")\n",
+    "filters, filter_peaks = load_filter_spectra(\"LF103454.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sorted(filter_peaks.items())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hv.Curve(filter_spectrum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "idx = 8.0\n",
+    "filter_spectrum = filters[idx]\n",
+    "# index = pd.Series(np.linspace(laser_cwl-40,laser_cwl+40,200))\n",
+    "# index = pd.Series(np.linspace(filter_spectrum.index[0],filter_spectrum.index[-1],10000))\n",
+    "# filter_spectrum = filter_spectrum.reindex(index=index)\n",
+    "# filter_spectrum.interpolate(method='nearest', inplace=True)\n",
+    "# index = filter_spectrum.index\n",
+    "filter_spectrum /= filter_spectrum.max()\n",
+    "filter_thresh = 0.8\n",
+    "laser_cwl = (filter_spectrum > filter_thresh)[::-1].idxmax()[0]\n",
+    "new_index = pd.Index(np.linspace(laser_cwl - 40, laser_cwl + 40, 100))\n",
+    "index = filter_spectrum.index.astype(np.float).union(new_index)\n",
+    "index.name = \"wavelength\"\n",
+    "filter_spectrum = filter_spectrum.reindex(index=index)\n",
+    "filter_spectrum.interpolate(method=\"linear\", inplace=True)\n",
+    "index = filter_spectrum.index  # probably unnecessary\n",
+    "# laser_cwl = 730\n",
+    "# temporal_fwhm = 110 * u.femtoseconds\n",
+    "# spectral_width = (lmbda**2/(u.speed_of_light * temporal_fwhm)).to(\"nm\")\n",
+    "# tbwp = 0.6\n",
+    "# laser_sigma = tbwp * spectral_width / (2 * np.sqrt(2 * np.log(2)))\n",
+    "laser_bandwidth = (\n",
+    "    110 * 1 / u.cm\n",
+    ")  # (tbwp/(u.speed_of_light * temporal_fwhm)).to(\"cm^-1\")\n",
+    "laser_fwhm = (laser_bandwidth * (laser_cwl * u.nm) ** 2).to(\"nm\")\n",
+    "laser_sigma = laser_fwhm / (2 * np.sqrt(2 * np.log(2)))\n",
+    "# laser_sigma = 2#5.1\n",
+    "laser_spectrum = norm.pdf(index.values, laser_cwl, laser_sigma)\n",
+    "laser_spectrum /= np.nanmax(laser_spectrum)\n",
+    "laser_spectrum = pd.Series(laser_spectrum, index=index, name=\"transmission\")\n",
+    "# laser_spectrum[laser_spectrum == 0] = np.nan\n",
+    "output_spectrum = filter_spectrum.multiply(laser_spectrum, axis=0)\n",
+    "lines = (\n",
+    "    hv.VLine(x=laser_cwl).opts(color=\"red\")\n",
+    "    * hv.VLine(x=laser_cwl + 5).opts(color=\"red\", line_dash=[2, 8])\n",
+    "    * hv.VLine(x=laser_cwl + 10).opts(color=\"red\", line_dash=\"dashed\")\n",
+    "    * hv.VLine(x=laser_cwl + 15).opts(color=\"red\", line_dash=\"dotdash\")\n",
+    "    * hv.VLine(x=laser_cwl + 20).opts(color=\"red\", line_dash=\"dotted\")\n",
+    ")\n",
+    "(\n",
+    "    (\n",
+    "        hv.Curve(np.log10(laser_spectrum))\n",
+    "        * hv.Curve(np.log10(filter_spectrum))\n",
+    "        * hv.Curve(np.log10(output_spectrum)).opts(color=\"purple\")\n",
+    "        * lines\n",
+    "        * hv.HLine(y=-4).opts(color=\"orange\")\n",
+    "        * hv.HLine(y=-6).opts(color=\"orange\")\n",
+    "    )\n",
+    "    .redim.range(wavelength=(laser_cwl - 10, laser_cwl + 25), transmission=(-8, 0))\n",
+    "    .opts(width=600)\n",
+    "    + (\n",
+    "        hv.Curve(laser_spectrum)\n",
+    "        * hv.Curve(filter_spectrum)\n",
+    "        * hv.Curve(output_spectrum).opts(color=\"purple\")\n",
+    "        * lines\n",
+    "    )\n",
+    "    .redim(transmission=hv.Dimension(\"power\", range=(0, 1)))\n",
+    "    .opts(width=600)\n",
+    ").cols(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "laser_fwhm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hv.Curve(filters[idx])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hv.Curve(filters[5.0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "beam_spectrum = pd.read_csv(\"900nm_discovery.txt\", sep=\"\\t\").set_index(\"Wavelength\")\n",
+    "beam_spectrum /= beam_spectrum.max()\n",
+    "laser_cwl = beam_spectrum.idxmax()[0]\n",
+    "log_beam_spectrum = np.log10(beam_spectrum)\n",
+    "log_beam_spectrum[np.isinf(log_beam_spectrum)] = np.nan"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(\n",
+    "    hv.Curve(log_beam_spectrum).redim.range(\n",
+    "        wavelength=(laser_cwl - 10, laser_cwl + 25), transmission=(-8, 0)\n",
+    "    )\n",
+    "    * hv.VLine(x=laser_cwl).opts(color=\"red\")\n",
+    "    * hv.VLine(x=laser_cwl + 5).opts(color=\"red\", line_dash=[2, 8])\n",
+    "    * hv.VLine(x=laser_cwl + 10).opts(color=\"red\", line_dash=\"dashed\")\n",
+    "    * hv.VLine(x=laser_cwl + 15).opts(color=\"red\", line_dash=\"dotdash\")\n",
+    "    * hv.VLine(x=laser_cwl + 20).opts(color=\"red\", line_dash=\"dotted\")\n",
+    "    * hv.HLine(y=-1).opts(color=\"orange\")\n",
+    "    * hv.HLine(y=-2).opts(color=\"orange\")\n",
+    "    * hv.HLine(y=-3).opts(color=\"orange\")\n",
+    ").opts(width=600)"
    ]
   },
   {
@@ -137,6 +564,22 @@
     ")\n",
     "laser_power.index.name = \"wavelength\"\n",
     "hv.Curve(laser_power, \"wavelength\", \"power\").opts(width=800)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "laser_power"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Image data"
    ]
   },
   {
