[shenker/microscope_design] Got xarray working.

--- a/paulssonlab/src/paulssonlab/shenker/microscope_design/Hyperspectral spectral resolution.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/microscope_design/Hyperspectral spectral resolution.ipynb
@@ -11,7 +11,9 @@
     "import re\n",
     "import requests\n",
     "import holoviews as hv\n",
-    "import pint"
+    "import matplotlib.pyplot as plt\n",
+    "import pint\n",
+    "import nd2reader"
    ]
   },
   {
@@ -30,61 +32,6 @@
    "outputs": [],
    "source": [
     "hv.extension(\"bokeh\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Todo"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- MM crop normalized (sets image grid)\n",
-    "- excitation line (on image grid)\n",
-    "    - curvature\n",
-    "    - inhomogeneity\n",
-    "- project excitation line on sample\n",
-    "- laser power\n",
-    "- laser+filter spectrum\n",
-    "- excitation spectrum\n",
-    "- photophysics\n",
-    "- prism generates emission spectrum\n",
-    "- add reflected excitation light (10^6?)\n",
-    "- physical blocker\n",
-    "- sensor\n",
-    "    - QE\n",
-    "    - full-well\n",
-    "    - dark noise\n",
-    "    - linearity\n",
-    "    - spatial homogeneity"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Definitions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def clean_multiindex_csv(df):\n",
-    "    columns = pd.DataFrame(df.columns.tolist())\n",
-    "    columns.loc[columns[0].str.startswith(\"Unnamed:\"), 0] = np.nan\n",
-    "    columns[0] = columns[0].fillna(method=\"ffill\")\n",
-    "    mask = pd.isnull(columns[0])\n",
-    "    columns[0] = columns[0].fillna(\"\")\n",
-    "    columns.loc[mask, [0, 1]] = columns.loc[mask, [1, 0]].values\n",
-    "    df.columns = pd.MultiIndex.from_tuples(columns.to_records(index=False).tolist())\n",
-    "    return df"
    ]
   },
   {
@@ -273,23 +220,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def load_filter_spectra(filename):\n",
-    "    filters_all = clean_multiindex_csv(pd.read_csv(filename, header=[2, 3]).iloc[:, 1:])\n",
-    "    filters = {}\n",
-    "    filter_peaks = {}\n",
-    "    for pos in filters_all.columns.levels[0]:\n",
-    "        name = float(re.sub(r\"(?:Filter|Sample 2E) @ ([\\d.]+) mm\", r\"\\1\", pos))\n",
-    "        filters[name] = filters_all[pos].set_index(filters_all[pos].columns[0])\n",
-    "        filters[name].columns = [\"transmission\"]\n",
-    "        filters[name].index.name = \"wavelength\"\n",
-    "        filters[name] /= 100  # convert to fraction\n",
-    "        filter_peaks[name] = filters[name].iloc[:, 0].idxmax()\n",
-    "    return filters, filter_peaks"
+    "# Laser + filter"
    ]
   },
   {
@@ -580,16 +514,6 @@
    "metadata": {},
    "source": [
     "# Image data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import nd2reader\n",
-    "import matplotlib.pyplot as plt"
    ]
   },
   {
