[shenker/microscope_design] Moved functions to simulation.py.

--- a/paulssonlab/src/paulssonlab/shenker/microscope_design/Hyperspectral simulation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/microscope_design/Hyperspectral simulation.ipynb
@@ -25,7 +25,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "u = pint.UnitRegistry()"
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "import simulation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "u = simulation.ureg"
    ]
   },
   {
@@ -67,26 +78,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def image_to_xarray(img, scale):\n",
-    "    return xr.DataArray(\n",
-    "        img,\n",
-    "        coords=dict(\n",
-    "            x=scale * np.arange(img.shape[1]), y=scale * np.arange(img.shape[0])[::-1]\n",
-    "        ),\n",
-    "        dims=[\"y\", \"x\"],\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nd2 = nd2reader.ND2Reader(\"ClpP_mEGFP_100x.nd2\")\n",
+    "# nd2 = nd2reader.ND2Reader(\"ClpP_mEGFP_100x.nd2\")\n",
     "# nd2._parser._raw_metadata.z_levels = [0]\n",
-    "sample_img = nd2.get_frame_2D(v=0, c=1)  # [:,500:1000]\n",
-    "sample_img = image_to_xarray(sample_img, nd2.metadata[\"pixel_microns\"])"
+    "# sample_img = nd2.get_frame_2D(v=0, c=1)  # [:,500:1000]\n",
+    "# sample_img = image_to_xarray(sample_img, nd2.metadata[\"pixel_microns\"])"
    ]
   },
   {
@@ -97,7 +92,7 @@
    "source": [
     "sample_img = tifffile.imread(\"t000001xy14c2.tif\")\n",
     "scale = 4.25 / 20\n",
-    "sample_img = image_to_xarray(sample_img, scale)"
+    "sample_img = simulation.image_to_xarray(sample_img, scale)"
    ]
   },
   {
@@ -122,27 +117,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def draw_excitation_line(\n",
-    "    width, edge_defocus, base_defocus, falloff, width_px=6500, height_px=300\n",
-    "):\n",
-    "    if not ((0 <= falloff) and (falloff <= 1)):\n",
-    "        raise ValueError(\"falloff must be between 0 and 1\")\n",
-    "    # expect defocus parameters in um\n",
-    "    width = float(width / u.um)\n",
-    "    edge_defocus = float(edge_defocus / u.um)\n",
-    "    base_defocus = float(base_defocus / u.um)\n",
-    "    x_dependence = np.abs(np.linspace(-1, 1, width_px)) ** 2\n",
-    "    sigma = edge_defocus * x_dependence + base_defocus\n",
-    "    x_max = width / 2\n",
-    "    xs = np.linspace(-x_max, x_max, width_px)\n",
-    "    y_max = 6 * sigma.max()  # 6 sigma\n",
-    "    ys = np.linspace(-y_max, y_max, height_px)\n",
-    "    img = scipy.stats.norm.pdf(\n",
-    "        np.arange(height_px)[:, np.newaxis],\n",
-    "        height_px / 2,\n",
-    "        sigma,\n",
-    "    ) * (1 - falloff * x_dependence)\n",
-    "    return xr.DataArray(img, coords=dict(x=xs, y=ys), dims=[\"y\", \"x\"])"
+    "line_img = simulation.draw_excitation_line(1.3 * u.mm, 0.2 * u.um, 0.2 * u.um, 0.3)"
    ]
   },
   {
@@ -151,65 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "line_img = draw_excitation_line(1.3 * u.mm, 2 * u.um, 2 * u.um, 0.3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sample_img"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "line_img"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sample_img.interp_like(\n",
-    "    line_img.assign_coords(x=line_img.x + 500, y=line_img.y + 470)\n",
-    ").plot(\n",
-    "    aspect=20, size=5\n",
-    ")  # .pcolormesh(aspect=\"equal\", size=10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sample_offset = offset_xarray(sample_img, line_img, dict(x=500, y=470))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sample_offset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "line_img"
+    "sample_offset = simulation.offset_xarray(sample_img, line_img, dict(x=500, y=470))"
    ]
   },
   {
@@ -220,108 +137,6 @@
    "source": [
     "(sample_offset * line_img).plot(aspect=20, size=5)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sample_img.coords"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def offset_xarray(a, b, offsets):\n",
-    "    offsets = {name: getattr(b, name) + val for name, val in offsets.items()}\n",
-    "    return a.interp_like(b.assign_coords(**offsets)).assign_coords(b.coords)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "offset_xarray(sample_img, line_img, dict(x=100, y=30)).plot.imshow()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = sample_img.interp_like(line_img.assign_coords(x=line_img.x + 0, y=line_img.y + 20))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "line_img"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a * line_img"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(\n",
-    "    sample_img.interp_like(line_img.assign_coords(x=line_img.x + 0, y=line_img.y + 100))\n",
-    "    * line_img\n",
-    ").plot.imshow()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "line_img * sample_img"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "_.plot.imshow()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
