[shenker/microscope_design] Update filenames.

--- a/paulssonlab/src/paulssonlab/shenker/microscope_design/Hyperspectral spectral resolution.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/microscope_design/Hyperspectral spectral resolution.ipynb
@@ -13,7 +13,7 @@
     "import holoviews as hv\n",
     "import matplotlib.pyplot as plt\n",
     "import pint\n",
-    "import nd2reader"
+    "from scipy.stats import norm"
    ]
   },
   {
@@ -22,7 +22,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "u = pint.UnitRegistry()"
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "import simulation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "u = simulation.ureg"
    ]
   },
   {
@@ -74,15 +85,6 @@
    "metadata": {},
    "source": [
     "# Femtosecond laser"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from scipy.stats import norm"
    ]
   },
   {
@@ -233,7 +235,7 @@
    "outputs": [],
    "source": [
     "# filters, filter_peaks = load_filter_spectra(\"LF102474.csv.csv\")\n",
-    "filters, filter_peaks = load_filter_spectra(\"LF103454.csv\")"
+    "filters, filter_peaks = simulation.load_filter_spectra(\"LF103454.csv\")"
    ]
   },
   {
@@ -260,7 +262,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "idx = 8.0\n",
+    "idx = 86.0\n",
     "filter_spectrum = filters[idx]\n",
     "# index = pd.Series(np.linspace(laser_cwl-40,laser_cwl+40,200))\n",
     "# index = pd.Series(np.linspace(filter_spectrum.index[0],filter_spectrum.index[-1],10000))\n",
@@ -282,7 +284,7 @@
     "# tbwp = 0.6\n",
     "# laser_sigma = tbwp * spectral_width / (2 * np.sqrt(2 * np.log(2)))\n",
     "laser_bandwidth = (\n",
-    "    110 * 1 / u.cm\n",
+    "    200 * 1 / u.cm\n",
     ")  # (tbwp/(u.speed_of_light * temporal_fwhm)).to(\"cm^-1\")\n",
     "laser_fwhm = (laser_bandwidth * (laser_cwl * u.nm) ** 2).to(\"nm\")\n",
     "laser_sigma = laser_fwhm / (2 * np.sqrt(2 * np.log(2)))\n",
@@ -354,7 +356,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "beam_spectrum = pd.read_csv(\"900nm_discovery.txt\", sep=\"\\t\").set_index(\"Wavelength\")\n",
+    "pd.read_csv(\"discovery_660nm.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "beam_spectrum = pd.read_csv(\"discovery_660nm.csv\").set_index(\"Wavelength\")\n",
     "beam_spectrum /= beam_spectrum.max()\n",
     "laser_cwl = beam_spectrum.idxmax()[0]\n",
     "log_beam_spectrum = np.log10(beam_spectrum)\n",
