[shenker/microscope_design] Tophat/supergaussian/generalized Gaussian excitation line profile.

--- a/paulssonlab/src/paulssonlab/shenker/microscope_design/Hyperspectral simulation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/microscope_design/Hyperspectral simulation.ipynb
@@ -16,7 +16,8 @@
     "import pint\n",
     "import nd2reader\n",
     "import tifffile\n",
-    "import scipy.stats"
+    "import scipy.stats\n",
+    "import skimage"
    ]
   },
   {
@@ -36,7 +37,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "u = simulation.ureg"
+    "# u = simulation.ureg\n",
+    "class ObjProxy(object):\n",
+    "    def __init__(self, module_name, attr_name):\n",
+    "        self.__module_name = module_name\n",
+    "        self.__attr_name = attr_name\n",
+    "\n",
+    "    def __getattr__(self, name):\n",
+    "        return getattr(getattr(globals()[self.__module_name], self.__attr_name), name)\n",
+    "\n",
+    "\n",
+    "u = ObjProxy(\"simulation\", \"ureg\")"
    ]
   },
   {
@@ -63,6 +74,60 @@
    "source": [
     "excitation_bins = np.linspace(300, 850, 1000)\n",
     "emission_bins = excitation_bins"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# FP spectra"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# list of urls -> dict of spectra (columns: ex, em, 2p)\n",
+    "# rebin spectra\\n\",\n",
+    "# rebinned spectra -> 2D spectra (see-saw)\n",
+    "\n",
+    "# 2D spectra -> img spectral hypercube ground truth [ex,em,y,x]\n",
+    "# sample line (pass defocus array?) [ex,y,x]\n",
+    "# rebin laser spectrum\n",
+    "# sample line * rebinned laser spectrum [ex,y,x]\n",
+    "# line * sample = emission ground truth [em,y,x]\n",
+    "# emission ground truth + reflectivity * excitation = emission [em,y,x]\n",
+    "# blur/resample? to NA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spectra_urls = [\n",
+    "    \"https://www.fpbase.org/spectra_csv/?q=79,80,158\",\n",
+    "    \"https://www.fpbase.org/spectra_csv/?q=1451,1450\",\n",
+    "    \"https://www.fpbase.org/spectra_csv/?q=119,120\",\n",
+    "    \"https://www.fpbase.org/spectra_csv/?q=121,122\",\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spectra = {\n",
+    "    name: pd.read_csv(url)\n",
+    "    .rename(columns={f\"{name} {kind}\": kind for kind in (\"ex\", \"em\", \"2p\")})\n",
+    "    .set_index(\"wavelength\")\n",
+    "    for name, url in spectra_urls.items()\n",
+    "}"
    ]
   },
   {
@@ -105,6 +170,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import skimage.filters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels = sample_img.values > skimage.filters.threshold_otsu(sample_img.values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_spectra = 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spectra_idx = skimage.morphology.label(labels) % num_spectra + (labels != 0)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -117,7 +218,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "line_img = simulation.draw_excitation_line(1.3 * u.mm, 0.2 * u.um, 0.2 * u.um, 0.3)"
+    "line_img = simulation.draw_excitation_line(\n",
+    "    1.3 * u.mm,\n",
+    "    np.linspace(0.1, 0.5, 10) * u.um,\n",
+    "    0 * u.um,\n",
+    "    1,\n",
+    "    p_vertical=3,\n",
+    "    p_horizontal=6,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "line_img = simulation.draw_excitation_line(\n",
+    "    1.3 * u.mm, 0.3 * u.um, 0 * u.um, 1, p_vertical=3, p_horizontal=6\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "line_img.plot()"
    ]
   },
   {
