[shenker/microscope_design] Import spectra from FPbase.

--- a/paulssonlab/src/paulssonlab/shenker/microscope_design/Hyperspectral simulation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/microscope_design/Hyperspectral simulation.ipynb
@@ -89,6 +89,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# sample line (pass defocus array?) [ex,y,x]\n",
+    "\n",
+    "###\n",
+    "\n",
     "# list of urls -> dict of spectra (columns: ex, em, 2p)\n",
     "# rebin spectra\\n\",\n",
     "# rebinned spectra -> 2D spectra (see-saw)\n",
@@ -98,8 +102,7 @@
     "# rebin laser spectrum\n",
     "# sample line * rebinned laser spectrum [ex,y,x]\n",
     "# line * sample = emission ground truth [em,y,x]\n",
-    "# emission ground truth + reflectivity * excitation = emission [em,y,x]\n",
-    "# blur/resample? to NA"
+    "# emission ground truth + reflectivity * excitation = emission [em,y,x]"
    ]
   },
   {
@@ -122,12 +125,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spectra = {\n",
-    "    name: pd.read_csv(url)\n",
-    "    .rename(columns={f\"{name} {kind}\": kind for kind in (\"ex\", \"em\", \"2p\")})\n",
-    "    .set_index(\"wavelength\")\n",
-    "    for name, url in spectra_urls.items()\n",
-    "}"
+    "spectra = simulation.import_fpbase_spectra(spectra_urls)"
    ]
   },
   {
@@ -210,6 +208,18 @@
    "metadata": {},
    "source": [
     "# Excitation line"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scipy.stats.gennorm.pdf(\n",
+    "    np.linspace(-1, 1, 10)[:, np.newaxis, np.newaxis],\n",
+    "    np.linspace(1, 2, 7)[np.newaxis, np.newaxis, :],\n",
+    ")"
    ]
   },
   {
