[shenker/microscope_design] Vectorized draw_excitation_line.

--- a/paulssonlab/src/paulssonlab/shenker/microscope_design/Hyperspectral simulation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/microscope_design/Hyperspectral simulation.ipynb
@@ -216,6 +216,73 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 2 -> [[2]]\n",
+    "# [2,3] -> [[2],[3]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.array([0, 1, 2]).reshape((-1, 1, 1)).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.array([0, 1, 2]).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.atleast_3d([0, 1, 2]).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.atleast_2d([2, 3]).T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.array([2, 2]).reshape((-1, 1))  # .shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = scipy.stats.gennorm.pdf(\n",
+    "    np.linspace(-1, 1, 10)[np.newaxis, :], np.array([2, 10])[:, np.newaxis]\n",
+    ")\n",
+    "plt.plot(a.T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "scipy.stats.gennorm.pdf(\n",
     "    np.linspace(-1, 1, 10)[:, np.newaxis, np.newaxis],\n",
     "    np.linspace(1, 2, 7)[np.newaxis, np.newaxis, :],\n",
@@ -229,12 +296,61 @@
    "outputs": [],
    "source": [
     "line_img = simulation.draw_excitation_line(\n",
-    "    1.3 * u.mm,\n",
-    "    np.linspace(0.1, 0.5, 10) * u.um,\n",
-    "    0 * u.um,\n",
-    "    1,\n",
-    "    p_vertical=3,\n",
-    "    p_horizontal=6,\n",
+    "    1.3 * u.mm, 0.3 * u.um, 0 * u.um, 1, p_vertical=3, p_horizontal=6\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "line_img.plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "line_img = simulation.draw_excitation_line(\n",
+    "    1.3 * u.mm, 0.3 * u.um, 0 * u.um, np.array([0.2, 1]), p_vertical=3, p_horizontal=6\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "line_img[1].plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "line_img[0].plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "line_img = simulation.draw_excitation_line(\n",
+    "    [0.5, 1.3] * u.mm,\n",
+    "    [0.1, 0.3] * u.um,\n",
+    "    [0.05, 0.1] * u.um,\n",
+    "    np.array([0.9, 1]),\n",
+    "    p_vertical=np.array([3, 4]),\n",
+    "    p_horizontal=np.array([6, 7]),\n",
     ")"
    ]
   },
