--- a/paulssonlab/src/paulssonlab/shenker/microscope_design/Hyperspectral simulation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/microscope_design/Hyperspectral simulation.ipynb
@@ -345,13 +345,22 @@
    "outputs": [],
    "source": [
     "line_img = simulation.draw_excitation_line(\n",
-    "    [0.5, 1.3] * u.mm,\n",
-    "    [0.1, 0.3] * u.um,\n",
-    "    [0.05, 0.1] * u.um,\n",
-    "    np.array([0.9, 1]),\n",
-    "    p_vertical=np.array([3, 4]),\n",
-    "    p_horizontal=np.array([6, 7]),\n",
+    "    [1.0, 1.3] * u.mm,\n",
+    "    [0.3, 0.3] * u.um,\n",
+    "    [0, 0] * u.um,\n",
+    "    np.array([1, 1]),\n",
+    "    p_vertical=np.array([3, 3]),\n",
+    "    p_horizontal=np.array([6, 6]),\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "line_img[0].plot()"
    ]
   },
   {
